--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,37 +1,35 @@
 name: CI
 
+permissions: {}
+
 on:
   push:
-    branches:
-      - master
   pull_request:
+  workflow_dispatch:
+
+env:
+  FOUNDRY_PROFILE: ci
 
 jobs:
-  test:
-    strategy:
-      matrix:
-        node: ['10.x', '12.x']
-        os: [ubuntu-latest]
-
-    runs-on: ${{ matrix.os }}
-
+  check:
+    name: Foundry project
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v5
         with:
-          node-version: ${{ matrix.node }}
+          persist-credentials: false
+          submodules: recursive
 
-      - run: npm install -g yarn
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
 
-      - id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v1
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ matrix.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ matrix.os }}-yarn-
+      - name: Show Forge version
+        run: forge --version
 
-      - run: yarn
-      - run: yarn lint
-      - run: yarn test
+      - name: Run Forge build
+        run: forge build --sizes
+
+      - name: Run Forge tests
+        run: forge test -vvv
